# uitests_saucedemo

./: pyproject.toml
features/: auth.feature  burger_menu.feature  checkout_page.feature  products.feature  shopping_cart.feature
features/locators/: login_page.py  products_page.py  shopping_cart_page.py
features/page_model/: checkout_page.py  login_page.py  products_page.py  shopping_cart_page.py
features/steps/: checkout_page.py  login_page.py  navigation.py  products_page.py  shopping_cart_page.py
